--- a/Index_Exam.ipynb
+++ b/Index_Exam.ipynb
@@ -62,7 +62,7 @@
     "from pprint import pprint\n",
     "\n",
     "# Запрос для Яндекс Метрики\n",
-    "token = 'заменить на валдиный токен'\n",
+    "token = #'В СТРОКЕ УКАЗАТЬ СВОЙ РАБОЧИЙ ТОКЕН'\n",
     "headers = {'Authorization': 'OAuth'+token}\n",
     "params = {'metrics': 'ym:s:visits',\n",
     "         'dimensions': 'ym:s:hour,ym:s:lastsignTrafficSource,ym:s:isRobot',\n",
